update: Check errors and update code

--- a/009_CSS/html/bai6.html
+++ b/009_CSS/html/bai6.html
@@ -12,15 +12,15 @@
         <img id="logo" src="../imgs/logo.png" alt="logo" width="150" height="30">
         <nav class="menu">
             <ul>
-                <li>home</li>
-                <span>/</span>
-                <li>news</li>
-                <span>/</span>
-                <li>archives</li>
-                <span>/</span>
-                <li>about</li>
-                <span>/</span>
-                <li>contact</li>
+                <li><a href="https://www.google.com/">home</a></li>
+                <li>/</li>
+                <li><a href="https://www.google.com/">news</a></li>
+                <li>/</li>
+                <li><a href="https://www.google.com/">archives</a></li>
+                <li>/</li>
+                <li><a href="https://www.google.com/">about</a></li>
+                <li>/</li>
+                <li><a href="https://www.google.com/">contact</a></li>
             </ul>
         </nav>
     </header>
@@ -45,8 +45,8 @@
             </div>
         </div>
         <hr>
-        <p class="article-title">MORE ARTICLES</p>
         <article>
+            <h2 class="article-title">MORE ARTICLES</h2>
             <div>
                 <img src="../imgs/image2.png" alt="">
                 <p>In 1817 Baron von Drais invented a walking machine that would help him get around the royal gardens faster</p>
